--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -41,17 +41,21 @@
 </p>
 <%= link_to 'Edit', edit_user_path(@user) %>
 
-<h1>Connections</h1>
+<h1>Connections (<%= @user.live_connection_count %>)</h1>
 <p>
+	<table border="0" cellspacing="5" cellpadding="5">
 	<% @user.connected_users.each do |u| %>
-		<%= u.info %> 
-		<br/>
+	    <% connection = Connection.live_between(@user.id, u.id) %>
+		<tr>
+			<td><%= u.info %></td>
+			<td><%= link_to 'Destroy', connection, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	    </tr>
 	<% end %>
+	</table>
+	
 </p>
 
-
-
-<%= link_to 'Add a connection', "/users/new_connection/#{@user.id}" %> |
+<%= @user.live_connection_count >= 8 ? "Max connections (destroy before adding more)." : (link_to 'Add a connection', "/users/new_connection/#{@user.id}")%> |
 <%= link_to 'Users', users_path %>
 
 
