--- a/app/views/users/new_connection.html.erb
+++ b/app/views/users/new_connection.html.erb
@@ -20,10 +20,9 @@
         <td><%= user.last_name %></td>
         <td><%= user.mobile_number %></td>
         <td>
-			<%= user.live_connection_count < 8 ?
-				  	(link_to 'Pick', "/users/establish_connection/#{@user.id}?target_id=#{user.id}") :
-					"Maxed out"
-			%> | 
+			<%# user.live_connection_count < 8 ?
+				  	(link_to 'Pick', "/users/establish_connection/#{@user.id}?target_id=#{user.id}") : "Maxed out" %> 
+      <%= link_to 'Pick', "/users/establish_connection/#{@user.id}?target_id=#{user.id}" %>| 
 			<%= link_to 'Show', user %>
 		</td>
       </tr>
