--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,14 +48,18 @@
 	    <% connection = Connection.live_between(@user.id, u.id).first %>
 		<tr>
 			<td><%= u.info %></td>
-			<td><%= link_to 'Destroy', connection, {method: :delete, data: { confirm: 'Are you sure?' }} %></td>
+			<td>
+        <%= link_to 'Destroy', connection, {method: :delete, data: { confirm: 'Are you sure?' }} %> | 
+        <%= link_to 'Test Video', {controller: "users", action:"receive_test_video", params: {id: @user.id, sender_id: u.id}} %>
+      </td>
 	    </tr>
 	<% end %>
 	</table>
 	
 </p>
 
-<%= @user.live_connection_count >= 8 ? "Max connections (destroy before adding more)." : (link_to 'Add a connection', "/users/new_connection/#{@user.id}")%> |
+<%# @user.live_connection_count >= 8 ? "Max connections (destroy before adding more)." : (link_to 'Add a connection', "/users/new_connection/#{@user.id}")%> 
+<%= link_to 'Add a connection', "/users/new_connection/#{@user.id}" %>|
 <%= link_to 'Users', users_path %>
 
 
