--- a/app/views/s3_infos/_form.html.erb
+++ b/app/views/s3_infos/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :region %><br>
-    <%= f.text_field :region %>
+    <%= f.text_field :region, value:@s3_info.region_str %>
   </div>
   <div class="field">
     <%= f.label :bucket %><br>
