IOS APNS notifications working with new tone and new app bundle.
Added pems for new bundle com.zazo.Zazo
Fixed notification to play the tone in the bundle.

--- a/app/views/kvstore_admin/index.html.erb
+++ b/app/views/kvstore_admin/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Listing Kvstore</h1>
 
 <table style="font-size:10px">
-  <thead>
+  <thead style="font-size:10px">
     <tr>
       <th>Key1</th>
       <th>Key2</th>
@@ -9,7 +9,7 @@
     </tr>
   </thead>
 
-  <tbody>
+  <tbody style="font-size:9px">
     <% Kvstore.all.each do |kv| %>
       <tr>
         <td><%= kv.key1 %></td>
