--- a/app/views/landing/invite.html.erb
+++ b/app/views/landing/invite.html.erb
@@ -1,5 +1,5 @@
 <div class="top">
-  <div class="salutation">Hey <%= @invitee.first_name %>,</div>
+  <div class="salutation">Hi <%= @invitee.first_name %>,</div>
   <div class="message">I sent you a message on <%= APP_CONFIG[:app_name] %></div>
   <div class="closing">~ <%= @inviter.first_name %></div>
   <%= link_to image_tag("down_arrow.png"), @store_url %>  
