--- a/app/views/s3_credentials/_form.html.erb
+++ b/app/views/s3_credentials/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@s3_info) do |f| %>
-  <% if @s3_info.errors.any? %>
+<%= form_for(@s3_credential) do |f| %>
+  <% if @s3_credential.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@s3_info.errors.count, "error") %> prohibited this s3_info from being saved:</h2>
+      <h2><%= pluralize(@s3_credential.errors.count, "error") %> prohibited this s3_credential from being saved:</h2>
 
       <ul>
-      <% @s3_info.errors.full_messages.each do |msg| %>
+      <% @s3_credential.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
