Landing page changed to use senders mkey

--- a/app/assets/stylesheets/landing_styles.css.scss
+++ b/app/assets/stylesheets/landing_styles.css.scss
@@ -19,7 +19,7 @@ button{
 
 .top { background-color: $orange-color; color: white; padding:60px 0px 35px; }
 
-.top.no_connection{ background-color: $light-grey-color; }
+.top.no_inviter{ background-color: $light-grey-color; }
 
 .salutation { font-size: 40px; font-weight: 700; padding-bottom:18px; }
 .message { font-size: 25px; font-weight:300; font-style: italic; padding-bottom:20px; }
