--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,6 +39,17 @@
   <strong>Status:</strong>
   <%= @user.status %>
 </p>
+
+<p>
+  <strong>Verification code:</strong>
+  <%= @user.verification_code %>
+</p>
+
+<p>
+  <strong>Verification sent at:</strong>
+  <%= @user.verification_date_time %>
+</p>
+
 <%= link_to 'Edit', edit_user_path(@user) %>
 
 <h1>Connections (<%= @user.live_connection_count %>)</h1>
@@ -49,16 +60,16 @@
 		<tr>
 			<td><%= u.info %></td>
 			<td>
-        <%= link_to 'Destroy', connection, {method: :delete, data: { confirm: 'Are you sure?' }} %> | 
+        <%= link_to 'Destroy', connection, {method: :delete, data: { confirm: 'Are you sure?' }} %> |
         <%= link_to 'Test Video', {controller: "users", action:"receive_test_video", params: {id: @user.id, sender_id: u.id}} %>
       </td>
 	    </tr>
 	<% end %>
 	</table>
-	
+
 </p>
 
-<%# @user.live_connection_count >= 8 ? "Max connections (destroy before adding more)." : (link_to 'Add a connection', "/users/new_connection/#{@user.id}")%> 
+<%# @user.live_connection_count >= 8 ? "Max connections (destroy before adding more)." : (link_to 'Add a connection', "/users/new_connection/#{@user.id}")%>
 <%= link_to 'Add a connection', "/users/new_connection/#{@user.id}" %>|
 <%= link_to 'Users', users_path %>
 
