--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,9 +1,16 @@
 doctype html
 html
   head
-    title Zazo
-    = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
-    = javascript_include_tag "application", "data-turbolinks-track" => true
-    = csrf_meta_tags
+    meta name="viewport" content="width=device-width, initial-scale=1.0"
+    title
+      = content_for?(:title) ? yield(:title) : 'Zazo'
+    meta name="description" content="#{content_for?(:description) ? yield(:description) : 'Zazo'}"
+    == stylesheet_link_tag "application", :media => 'all', 'data-turbolinks-track' => true
+    == javascript_include_tag 'application', 'data-turbolinks-track' => true
+    == csrf_meta_tags
   body
-    = yield
+    header
+      == render 'layouts/navigation'
+    main role="main"
+      == render 'layouts/messages'
+      == yield
