--- a/app/views/s3_credentials/show.html.slim
+++ b/app/views/s3_credentials/show.html.slim
@@ -12,4 +12,4 @@ p
 p
   strong> Secret key:
   = @s3_credential.secret_key
-= link_to 'Edit', edit_s3_credential_path(@s3_credential)
+= link_to 'Edit', edit_s3_credential_path(@s3_credential), class: 'btn btn-default'
