--- a/app/views/connections/index.html.slim
+++ b/app/views/connections/index.html.slim
@@ -1,9 +1,26 @@
 h1 Listing connections
-table
+table.table
   thead
-    = render :partial => 'list_head'
+    tr
+      th Creator ID
+      th Creator
+      th Target ID
+      th Target
+      th Status
+      th
+      th
+      th
   tbody
     - @connections.each do |connection|
-      = render :partial => 'list_row', :locals => {:connection => connection}
+      tr
+        td = connection.creator.id
+        td = connection.creator.name
+        td = connection.target.id
+        td = connection.target.name
+        td
+          span class=(['status', connection.status]) = connection.status
+        td = link_to 'Show', connection
+        td = link_to 'Edit', edit_connection_path(connection)
+        td = link_to 'Destroy', connection, method: :delete, data: { confirm: 'Are you sure?' }
 br
-= link_to 'New Connection', new_connection_path
+= link_to 'New Connection', new_connection_path, class: 'btn btn-default'
