--- a/app/views/connections/show.html.slim
+++ b/app/views/connections/show.html.slim
@@ -1,3 +1,7 @@
+h1
+  = @connection.creator.name
+  span<> ->
+  = @connection.target.name
 p#notice
   = notice
 p
@@ -15,6 +19,6 @@ p
 p
   strong> Status:
   = @connection.status
-= link_to 'Edit', edit_connection_path(@connection)
-'  |
-= link_to 'Back', connections_path
+= link_to 'Edit', edit_connection_path(@connection), class: 'btn btn-default'
+' &nbsp;
+= link_to 'Back', connections_path, class: 'btn btn-default'
