Use simple_form in scaffold forms

--- a/app/views/s3_credentials/edit.html.slim
+++ b/app/views/s3_credentials/edit.html.slim
@@ -1,3 +1,4 @@
-h1 Editing s3_credential
+h1 Editing S3 credential
 = render 'form'
-= link_to 'Show', @s3_credential
+br
+= link_to 'Show', @s3_credential, class: 'btn btn-default'
