--- a/app/views/connections/_form.html.slim
+++ b/app/views/connections/_form.html.slim
@@ -1,23 +1,6 @@
-= form_for(@connection) do |f|
-  - if @connection.errors.any?
-    #error_explanation
-      h2
-        = pluralize(@connection.errors.count, "error")
-        |  prohibited this connection from being saved:
-      ul
-        - @connection.errors.full_messages.each do |msg|
-          li = msg
-  .field
-    = f.label :creator_id
-    br
-    = f.number_field :creator_id
-  .field
-    = f.label :target_id
-    br
-    = f.number_field :target_id
-  .field
-    = f.label :status
-    br
-    = f.text_field :status
+= simple_form_for(@connection) do |f|
+  = f.association :creator
+  = f.association :target
+  = f.input :status
   .actions
     = f.submit
