--- a/app/views/connections/edit.html.slim
+++ b/app/views/connections/edit.html.slim
@@ -1,5 +1,6 @@
 h1 Editing connection
 = render 'form'
-= link_to 'Show', @connection
-|  |
-= link_to 'Back', connections_path
+br
+= link_to 'Show', @connection, class: 'btn btn-default'
+' &nbsp;
+= link_to 'Back', connections_path, class: 'btn btn-default'
