--- a/app/views/connections/new.html.slim
+++ b/app/views/connections/new.html.slim
@@ -1,3 +1,4 @@
 h1 New connection
 = render 'form'
-= link_to 'Back', connections_path
+br
+= link_to 'Back', connections_path, class: 'btn btn-default'
