--- a/app/views/s3_credentials/_form.html.slim
+++ b/app/views/s3_credentials/_form.html.slim
@@ -1,28 +1,7 @@
-= form_for(@s3_credential) do |f|
-  - if @s3_credential.errors.any?
-    #error_explanation
-      h2
-        = pluralize(@s3_credential.errors.count, "error")
-        |  prohibited this s3_credential from being saved:
-      ul
-        - @s3_credential.errors.full_messages.each do |msg|
-          li
-            = msg
-  .field
-    = f.label :region
-    br
-    = f.text_field :region
-  .field
-    = f.label :bucket
-    br
-    = f.text_field :bucket
-  .field
-    = f.label :access_key
-    br
-    = f.text_field :access_key
-  .field
-    = f.label :secret_key
-    br
-    = f.text_field :secret_key
+= simple_form_for(@s3_credential) do |f|
+  = f.input :region
+  = f.input :bucket
+  = f.input :access_key
+  = f.input :secret_key
   .actions
     = f.submit
