--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,39 +1,10 @@
-= form_for(@user) do |f|
-  - if @user.errors.any?
-    #error_explanation
-      h2
-        = pluralize(@user.errors.count, "error")
-        |  prohibited this user from being saved:
-      ul
-        - @user.errors.full_messages.each do |msg|
-          li = msg
-  .field
-    = f.label :first_name
-    br
-    = f.text_field :first_name
-  .field
-    = f.label :last_name
-    br
-    = f.text_field :last_name
-  .field
-    = f.label :mobile_number
-    br
-    = f.text_field :mobile_number
-  .field
-    = f.label :device_platform
-    br
-    = f.text_field :device_platform
-  .field
-    = f.label :auth
-    br
-    = f.text_field :auth
-  .field
-    = f.label :mkey
-    br
-    = f.text_field :mkey
-  .field
-    = f.label :status
-    br
-    = f.text_field :status
+= simple_form_for(@user) do |f|
+  = f.input :first_name
+  = f.input :last_name
+  = f.input :mobile_number
+  = f.input :device_platform
+  = f.input :auth
+  = f.input :mkey
+  = f.input :status
   .actions
     = f.submit
