--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,5 +1,6 @@
 h1 Editing user
 = render 'form'
-= link_to 'Show', @user
-|  |
-= link_to 'Back', users_path
+br
+= link_to 'Show', @user, class: 'btn btn-default'
+' &nbsp;
+= link_to 'Back', users_path, class: 'btn btn-default'
