--- a/app/views/connections/index.html.slim
+++ b/app/views/connections/index.html.slim
@@ -17,8 +17,7 @@ table.table
         td = connection.creator.name
         td = connection.target.id
         td = connection.target.name
-        td
-          span class=(['status', connection.status]) = connection.status
+        td = status_tag connection.status
         td = link_to 'Show', connection
         td = link_to 'Edit', edit_connection_path(connection)
         td = link_to 'Destroy', connection, method: :delete, data: { confirm: 'Are you sure?' }
