--- a/app/views/connections/show.html.slim
+++ b/app/views/connections/show.html.slim
@@ -4,21 +4,18 @@ h1
   = @connection.target.name
 p#notice
   = notice
-p
-  strong> Creator:
-  = @connection.creator.name
-  | [
-  = @connection.creator_id
-  | ]
-p
-  strong> Target:
-  = @connection.target.name
-  | [
-  = @connection.target_id
-  | ]
-p
-  strong> Status:
-  = @connection.status
+
+table.table
+  tr
+    td Creator
+    td = link_to "#{@connection.creator.name} [#{@connection.creator_id}]", user_path(@connection.creator)
+  tr
+    td Target
+    td = link_to "#{@connection.target.name} [#{@connection.target_id}]", user_path(@connection.target)
+  tr
+    td Status
+    td = status_tag @connection.status
+
 = link_to 'Edit', edit_connection_path(@connection), class: 'btn btn-default'
 ' &nbsp;
 = link_to 'Back', connections_path, class: 'btn btn-default'
