--- a/app/views/s3_credentials/show.html.slim
+++ b/app/views/s3_credentials/show.html.slim
@@ -1,15 +1,21 @@
+h1 S3 credential
 p#notice
   = notice
-p
-  strong> Region:
-  = @s3_credential.region
-p
-  strong> Bucket:
-  = @s3_credential.bucket
-p
-  strong> Access key:
-  = @s3_credential.access_key
-p
-  strong> Secret key:
-  = @s3_credential.secret_key
+
+table.table
+  tr
+    td Region
+    td = @s3_credential.region
+  tr
+    td Bucket
+    td = @s3_credential.bucket
+  tr
+    td Access key
+    td
+      code = @s3_credential.access_key
+  tr
+    td Secret key
+    td
+      code = @s3_credential.secret_key
+
 = link_to 'Edit', edit_s3_credential_path(@s3_credential), class: 'btn btn-default'
