Added `error_notification` for forms

--- a/app/views/connections/_form.html.slim
+++ b/app/views/connections/_form.html.slim
@@ -1,4 +1,5 @@
 = simple_form_for(@connection) do |f|
+  = f.error_notification
   = f.association :creator
   = f.association :target
   = f.input :status
