--- a/app/views/s3_credentials/_form.html.slim
+++ b/app/views/s3_credentials/_form.html.slim
@@ -1,4 +1,5 @@
 = simple_form_for(@s3_credential) do |f|
+  = f.error_notification
   = f.input :region
   = f.input :bucket
   = f.input :access_key
