--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,4 +1,5 @@
 = simple_form_for(@user) do |f|
+  = f.error_notification
   = f.input :first_name
   = f.input :last_name
   = f.input :mobile_number
