--- a/app/views/videos/new.html.slim
+++ b/app/views/videos/new.html.slim
@@ -1,10 +1,6 @@
-= form_for @video  do |f|
-  = f.label :user_id, "Sender"
-  = f.collection_select :user_id, User.all, :id, :name, {}, name: 'user_id'
-  br
-  = f.label :receiver_id, "Receiver"
-  = f.collection_select :receiver_id, User.all, :id, :name, {}, name: 'receiver_id'
-  br
-  = f.file_field :file, name: "file"
-  br
+= simple_form_for @video do |f|
+  = f.error_notification
+  = f.association :user, label: 'Sender'
+  = f.association :receiver, label: 'Receiver'
+  = f.input :file, as: :file
   = f.submit
