Added icons on layout

--- a/app/views/layouts/landing.html.slim
+++ b/app/views/layouts/landing.html.slim
@@ -6,9 +6,9 @@ html
     meta name="viewport" content="width=device-width, user-scalable=no"
     meta name="description" content="There is nothing like Zazo"
     meta name="Keywords" content=""
-    link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"
-    link rel="image_src" href="/images/logo.png"
-    link rel="icon" href="../../favicon.ico"
+    link rel="shortcut icon" href=image_path('favicon16.ico') type="image/x-icon"
+    link rel="image_src" href=image_path('logo.png')
+    link rel="icon" href=image_path('favicon16.ico')
     link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,600" rel="stylesheet" type="text/css"
     title Zazo
     = stylesheet_link_tag  "landing", media: "all", "data-turbolinks-track" => true
