--- a/app/assets/stylesheets/landing_styles.css.sass
+++ b/app/assets/stylesheets/landing_styles.css.sass
@@ -1,43 +1,111 @@
-*
-  margin: 0
-
 $orange-color: #F68A25
 $dark-grey-color: #4e4d43
 $light-grey-color: #747161
+$font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif
+$body-bg: $dark-grey-color
+$text-color: #efefef
+// $font-size-h1: 20px
+// $font-size-h2: 12px
+$headings-font-family: $font-family-sans-serif
+$headings-font-weight: 300
+
+$button-color: white
+$button-background: #9AC23B
+$button-border: #333
+$button-radius: 70px
+
+// Core variables and mixins
+@import bootstrap/variables
+@import bootstrap/mixins
+
+// Reset and dependencies
+@import bootstrap/normalize
+@import bootstrap/print
+@import bootstrap/glyphicons
+
+// Core CSS
+@import bootstrap/scaffolding
+@import bootstrap/type
+@import bootstrap/code
+@import bootstrap/grid
+@import bootstrap/tables
+@import bootstrap/forms
+@import bootstrap/buttons
+
+// Utility classes
+@import bootstrap/utilities
+@import bootstrap/responsive-utilities
+
 
 body
-  font-family: "Roboto", Helvetica, Arial, sans-serif
-  color: #efefef
-  font-weight: 300
   text-align: center
-  background: $light-grey-color
+  font-weight: 300
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0)
-  -webkit-tap-highlight-color: transparent
-  // i.e. Nexus5/Chrome and Kindle Fire HD 7''
+  -webkit-tap-highlight-color: transparent // i.e. Nexus5/Chrome and Kindle Fire HD 7''
 
-button
-  cursor: pointer
+main
+  @extend .container-fluid
+  margin: 0
+  padding: 0
 
-.top
+section
+  @include make-row
+  @include center-block
+
+.column
+  @extend .col-lg-12
+  @include center-block
+
+#top
   background-color: $orange-color
   color: white
-  padding: 60px 0px 35px
 
-  &.no_inviter
-    background-color: $light-grey-color
+  &.no-inviter
+    max-height: 760px
+    background-image: url(image_path("orange-background.jpg"))
 
-.salutation
+  #logo
+    @include center-block
+    background-color: $dark-grey-color
+    width: 245px
+    height: 110px
+    padding: 30px
+    margin-top: 0
+    margin-bottom: 50px
+
+#title
+  @include make-row
+  margin-top: 100px
+  margin-bottom: 10px
+  span
+    font-weight: 100
+    font-size: 36px
+
+.tag-line
+  @include make-row
+  margin-top: 10px
+  margin-bottom: 60px
+  em
+    font-weight: 300
+    font-size: 16px
+
+#screenshot
+  @include make-row
+  padding-bottom: 0
+  margin-bottom: 0
+
+#salutation
   font-size: 40px
   font-weight: 700
   padding-bottom: 18px
 
-.message
+#message
   font-size: 25px
   font-weight: 300
   font-style: italic
   padding-bottom: 20px
 
-.closing
+#closing
   font-size: 16px
   font-weight: 300
   font-style: italic
@@ -53,28 +121,37 @@ button
   .store_icon img
     width: 120px
 
-.middle
+#middle
   background-color: $dark-grey-color
   padding: 50px 0px
-  .text_download
+  #text-download
     font-size: 14px
     font-style: italic
     color: #aaa
     font-weight: 300
     padding-bottom: 40px
 
-.bottom
+.store-buttons
+  a:first-child
+    margin-right: 20px
+#bottom
   padding: 50px 0px
-  .tagline
-    font-size: 12px
+  background-color: $light-grey-color
+  .tag-line
     padding-top: 20px
+    em
+      font-size: 12px
 
-.get_btn
-  background: #9AC23B
-  border: 4px solid #333
-  border-radius: 70px
+#get-btn
+  @extend .btn
+  @include border-top-radius($button-radius)
+  @include border-bottom-radius($button-radius)
+  @include border-left-radius($button-radius)
+  @include border-right-radius($button-radius)
+  color: $button-color
+  background-color: $button-background
+  border: 4px $button-border solid
   font-size: 24px
   font-weight: 300
-  color: white
   padding: 20px 50px
   margin-bottom: 40px
