--- a/app/views/landing/invite.html.slim
+++ b/app/views/landing/invite.html.slim
@@ -1,21 +1,32 @@
-.top class=('no_inviter' if @inviter.blank?)
-- if @inviter
-  .salutation
-    ' Hi,
-  .message
-    ' I sent you a message on
-    = APP_CONFIG[:app_name]
-  .closing
-    ' ~
-    = @inviter.fullname
-  = link_to image_tag('down-arrow.png'), store_url
-- else
-  = link_to image_tag('zazo-type.png'), store_url
-.middle
-  button.get_btn onclick="window.location='#{store_url}'" Get the App!
-  .text_download Download Zazo now
-  = link_to image_tag('apple-store-badge.png'), APP_CONFIG[:iphone_store_url], class: 'store_icon'
-  = link_to image_tag('google-play-badge.png'), APP_CONFIG[:android_store_url], class: 'store_icon'
-.bottom
-  = link_to image_tag('zazo-type.png'), store_url
-  .tagline There ain't nothing like it.
+section#top class=('no-inviter' if @inviter.blank?)
+  .column
+    - if @inviter
+      .salutation
+        ' Hi,
+      .message
+        ' I sent you a message on
+        = app_name
+      .closing
+        ' ~
+        = @inviter.fullname
+      = link_to image_tag('down-arrow.png'), store_url
+    - else
+      #logo
+        = link_to image_tag('zazo-type.png'), store_url
+      #title
+        span Zazo is Face Messaging
+      .tag-line
+        em There ain't nothing like it!
+      #screenshot = image_tag 'phone.png'
+section#middle
+  .column
+    a#get-btn href=store_url Get the App!
+    #text-download Download the zazo app today!
+    .store-buttons
+      = link_to image_tag('apple-store-badge.png'), iphone_store_url, class: 'store_icon'
+      = link_to image_tag('google-play-badge.png'), android_store_url, class: 'store_icon'
+section#bottom
+  .column
+    = link_to image_tag('zazo-type.png'), store_url
+    .tag-line
+      em There ain't nothing like it.
