--- a/app/views/layouts/landing.html.slim
+++ b/app/views/layouts/landing.html.slim
@@ -9,8 +9,8 @@ html
     link rel="shortcut icon" href=image_path('favicon16.ico') type="image/x-icon"
     link rel="image_src" href=image_path('logo.png')
     link rel="icon" href=image_path('favicon16.ico')
-    link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,600" rel="stylesheet" type="text/css"
+    link href="http://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600" rel="stylesheet" type="text/css"
     title Zazo
-    = stylesheet_link_tag  "landing", media: "all", "data-turbolinks-track" => true
+    = stylesheet_link_tag  "landing", media: "all", "data-turbolinks-track" => false
   body
-    = yield
+    main role="main" = yield
