Added privacy policy page

--- a/app/views/landing/invite.html.slim
+++ b/app/views/landing/invite.html.slim
@@ -29,3 +29,4 @@ section#bottom
     = link_to image_tag('zazo-type.png'), store_url
     .tag-line
       em There ain't nothing like it.
+    = link_to 'privacy policy', privacy_path
