--- a/app/assets/stylesheets/landing.css.sass
+++ b/app/assets/stylesheets/landing.css.sass
@@ -14,6 +14,9 @@ $button-background: #9AC23B
 $button-border: #333
 $button-radius: 70px
 
+$well-bg: $light-grey-color
+$well-border: $dark-grey-color
+
 // Core variables and mixins
 @import bootstrap/variables
 @import bootstrap/mixins
@@ -32,10 +35,12 @@ $button-radius: 70px
 @import bootstrap/forms
 @import bootstrap/buttons
 
+// Components
+@import bootstrap/wells
+
 // Utility classes
 @import bootstrap/utilities
 @import bootstrap/responsive-utilities
-
 
 body
   text-align: center
@@ -51,6 +56,9 @@ main
 img
   @extend .img-responsive
   margin: 0 auto
+
+a, a:active, a:hover
+  color: $text-color
 
 section
   @include make-row
@@ -150,6 +158,7 @@ section
   background-color: $light-grey-color
   .tag-line
     padding-top: 20px
+    margin-bottom: 20px
     em
       font-size: 12px
 
