Landing page tweak

--- a/app/assets/stylesheets/landing.css.sass
+++ b/app/assets/stylesheets/landing.css.sass
@@ -41,7 +41,8 @@ body
   text-align: center
   font-weight: 300
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0)
-  -webkit-tap-highlight-color: transparent // i.e. Nexus5/Chrome and Kindle Fire HD 7''
+  // i.e. Nexus5/Chrome and Kindle Fire HD 7''
+  -webkit-tap-highlight-color: transparent
 
 main
   @extend .container-fluid
@@ -79,7 +80,7 @@ section
 
 #title
   @include make-row
-  margin-top: 100px
+  margin-top: 60px
   margin-bottom: 10px
   span
     font-weight: 100
