--- a/app/views/landing/privacy.html.slim
+++ b/app/views/landing/privacy.html.slim
@@ -1,5 +1,27 @@
-h1 Zazo Privacy Policy
 
-p.well On registration you provide us with your name and phone number. We store this information securely. We never share it with anyone. Ever.
+div.well
+  h1 class=('text-center') #{app_name} Privacy Policy
 
-section = link_to 'Home', root_path
+  h3 What you give us
+  p On registration you provide us with your name and phone number.
+
+  h3 Why we need it
+  p #{app_name} is intended for private communication between people who know each other well and who already text each other regularly. Think of #{app_name} as Face texting.
+
+  p Our aim is to prevent someone sending a #{app_name} posing as you. We also aim to prevent someone posing as you from receiving a #{app_name} intended for you.
+
+  p We ask you to use your real name because that is how the people who know you recognize you.
+
+  p We ask you to provide your mobile phone number so that we can send you a verification code by text message to ensure that you own that number and you are who you say you are.
+
+  p That way when your friends send you a #{app_name} they can be certain it goes to you. And when you  send your friends a #{app_name} you can be certain no one else can see it.
+
+  h3 How we store it
+  p We store you information securely and use it only for identifying you when you use #{app_name}.
+
+  h3 Do we share it?
+  p We never share your information with anyone. Ever.
+
+
+section class=('text-center')
+  = link_to 'Home', root_path
