Markup code style fix

--- a/app/views/landing/privacy.html.slim
+++ b/app/views/landing/privacy.html.slim
@@ -1,4 +1,4 @@
-h1 class=('text-center') #{app_name} Privacy Policy
+h1.text-center #{app_name} Privacy Policy
 
 div.well
   h3 What you give us
@@ -22,5 +22,5 @@ div.well
   p We never share your information with anyone. Ever.
 
 
-section class=('text-center')
+section.text-center
   = link_to 'Home', root_path
