iPhone coming soon
Links by default go to android rather than ios.
Tweaks to privacy page and landing page.
Ios coming soon page used for iphone store until it is available.

TODO: When app is in iphone store redirect to the app store if  we detect android or ios.

--- a/app/views/landing/privacy.html.slim
+++ b/app/views/landing/privacy.html.slim
@@ -22,5 +22,4 @@ div.well
   p We never share your information with anyone. Ever.
 
 
-section.text-center
-  = link_to 'Home', root_path
+section.text-center = link_to 'back', root_path
