--- a/app/views/landing/invite.html.slim
+++ b/app/views/landing/invite.html.slim
@@ -30,4 +30,4 @@
       = link_to image_tag('zazo-type.png'), store_url
       .tag-line
         em There ain't nothing like it.
-      = link_to 'privacy policy', privacy_path
+      = link_to 'privacy', privacy_path
