--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -46,9 +46,11 @@ table.table border="0" cellspacing="5" cellpadding="5"
       td = u.id
       td = link_to u.name, user_path(u)
       td
-        = link_to 'Destroy', connection, {method: :delete, data: { confirm: 'Are you sure?' }}
+        = link_to 'Destroy', connection, method: :delete, data: { confirm: 'Are you sure?' }
         '  |
-        = link_to 'Test Video', {controller: "users", action:"receive_test_video", params: {id: @user.id, sender_id: u.id}}
+        = link_to 'Test Video', receive_test_video_path(id: @user.id, sender_id: u.id)
+        '  |
+        = link_to 'Corrupt Video', receive_corrupt_video_path(id: @user.id, sender_id: u.id)
 = link_to 'Add a connection', "/users/new_connection/#{@user.id}", class: 'btn btn-default'
 ' &nbsp;
 = link_to 'Users', users_path, class: 'btn btn-default'
