--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -34,3 +34,11 @@ input[type='submit']
     margin-right: 1em
   #query
     width: 50em
+
+.true-value
+  @extend .glyphicon
+  @extend .glyphicon-ok
+
+.false-value
+  @extend .glyphicon
+  @extend .glyphicon-remove
