--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -33,12 +33,21 @@ table.table
   tr
     td Verification sent at
     td = @user.verification_date_time
+  tr
+    td # Connections
+    td = @user.connections.count
+  tr
+    td # Live connections
+    td = @user.live_connection_count
+  tr
+    td # Active connections
+    td = @user.active_connections.count
 
 = link_to 'Edit', edit_user_path(@user), class: 'btn btn-default'
 
 h4
-  ' Connections
-  span.badge = @user.live_connection_count
+  ' Connected users
+  span.badge = @user.connected_users.count
 table.table border="0" cellspacing="5" cellpadding="5"
   - @user.connected_users.each do |u|
     - connection = Connection.live_between(@user.id, u.id).first
@@ -51,6 +60,25 @@ table.table border="0" cellspacing="5" cellpadding="5"
         = link_to 'Test Video', receive_test_video_path(id: @user.id, sender_id: u.id)
         '  |
         = link_to 'Corrupt Video', receive_corrupt_video_path(id: @user.id, sender_id: u.id)
+        
+h4
+  ' Connections
+  span.badge = @user.connections.count
+table.table
+  tr
+    th Creator
+    th Target
+    th Active?
+    th Link
+  - @user.connections.each do |connection|
+    tr
+      td = link_to "#{connection.creator.name} (#{connection.creator.mobile_number})", connection.creator
+      td = link_to "#{connection.target.name} (#{connection.target.mobile_number})", connection.target
+      td
+        span class="#{connection.active?}-value"
+      td = link_to 'Show', connection
+      
+
 = link_to 'Add a connection', "/users/new_connection/#{@user.id}", class: 'btn btn-default'
 ' &nbsp;
 = link_to 'Users', users_path, class: 'btn btn-default'
