Added pagination to users, connections and kvstores controllers

--- a/app/views/kvstore_admin/index.html.slim
+++ b/app/views/kvstore_admin/index.html.slim
@@ -1,15 +1,20 @@
 h1 Listing Kvstore
-table.table
-  thead
-    tr
-      th Key1
-      th Key2
-      th Value
-  tbody
-    - @kvstores.each do |kv|
-      tr
-        td = kv.key1
-        td = kv.key2
-        td = kv.value
-br
-= link_to 'Delete all kvs', kvstore_admin_delete_all_path, class: 'btn btn-default'
+
+section
+  .col-md-12
+    == render partial: 'listing_info', locals: { collection: @kvstores }
+    table.table
+      thead
+        tr
+          th Key1
+          th Key2
+          th Value
+      tbody
+        - @kvstores.each do |kv|
+          tr
+            td = kv.key1
+            td = kv.key2
+            td = kv.value
+    br
+    p = paginate @kvstores
+    = link_to 'Delete all kvs', kvstore_admin_delete_all_path, class: 'btn btn-default'
