--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -9,7 +9,7 @@ section
     br
   .col-md-12
     - if @users.present?
-      p.text-success Listed #{@users.count} users
+      == render partial: 'listing_info', locals: { collection: @users }
       table.table
         thead
           tr
@@ -46,5 +46,5 @@ section
     - else
       - if params[:query].present?
         p.text-info No users found
-
+    p = paginate @users
     = link_to 'New User', new_user_path, class: 'btn btn-default'
