Add 'Go to user' field for users admin page
Fixes https://rollbar.com/zazo/zazo-server/items/52/

--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -4,8 +4,13 @@ section
   .col-md-12
     = form_tag users_path, method: :get, id: 'users-filter-form', class: 'form-inline' do
       .form-group
-        = search_field_tag :query, params[:query], class: 'form-control', placeholder: 'enter id, mkey or part of first_name, last_name or mobile_number'
-        = submit_tag 'Filter'
+        = search_field_tag :query, params[:query], class: 'form-control', placeholder: 'enter part of first_name, last_name or mobile_number'
+        = submit_tag 'Search user'
+      .form-group
+        span.or or
+      .form-group
+        = text_field_tag :user_id_or_mkey, params[:user_id_or_mkey], class: 'form-control', placeholder: 'enter id or mkey'
+        = submit_tag 'Go to user'
     br
   .col-md-12
     - if @users.present?
