Fixed user search style

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -40,6 +40,10 @@ input[type='submit']
     margin-right: 1em
   #query
     width: 50em
+  .or
+    font-weight: bold
+    margin-left: 0
+    margin-right: 4px
 
 .true-value
   @extend .glyphicon
