Show as 'Get the app' as text when not ios nor android
https://zazo.fogbugz.com/f/cases/436/Homescreen-get-the-app-button-in-case-not-ios-nor-android

--- a/app/views/landing/invite.html.slim
+++ b/app/views/landing/invite.html.slim
@@ -16,7 +16,10 @@
         #screenshot = image_tag 'phone.png'
   section#middle
     .column
-      a#get-btn href=store_url Get the App!
+      - if ios? || android?
+        a#get-btn href=store_url Get the App!
+      - else
+        h2 Get the App!
       #text-download
         - if @inviter
           | Download the #{app_name} app today to receive #{@inviter.first_name}'s message.
