Rename column users.email to emails and serialize as Array

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -14,6 +14,9 @@ table.table
     td Mobile number
     td = @user.mobile_number
   tr
+    td Emails
+    td = @user.emails.join(', ')
+  tr
     td Device platform
     td = human_device_platform @user.device_platform
   tr
