--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -52,3 +52,9 @@ input[type='submit']
 .false-value
   @extend .glyphicon
   @extend .glyphicon-remove
+
+.version-info
+  color: #AFAFAF
+  font-size: 18px
+  margin-top: 12px
+
