--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -60,9 +60,13 @@ table.table border="0" cellspacing="5" cellpadding="5"
       td
         = link_to 'Destroy', connection, method: :delete, data: { confirm: 'Are you sure?' }
         '  |
-        = link_to 'Test Video', receive_test_video_path(id: @user.id, sender_id: u.id)
+        = link_to 'Test Video Sani', receive_test_video_path(id: @user.id, sender_id: u.id, file: 'test_video_sani')
         '  |
-        = link_to 'Long Test Video', receive_long_test_video_path(id: @user.id, sender_id: u.id)
+        = link_to 'Test Video 1', receive_test_video_path(id: @user.id, sender_id: u.id, file: 'test_video_1')
+        '  |
+        = link_to 'Test Video 2', receive_test_video_path(id: @user.id, sender_id: u.id, file: 'test_video_2')
+        '  |
+        = link_to 'Test Video 3', receive_test_video_path(id: @user.id, sender_id: u.id, file: 'test_video_3')
         '  |
         = link_to 'Corrupt Video', receive_corrupt_video_path(id: @user.id, sender_id: u.id)
         '  |
