Change api controller specs

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -62,7 +62,7 @@ table.table border="0" cellspacing="5" cellpadding="5"
         '  |
         = link_to 'Test Video Sani', receive_test_video_path(id: @user.id, sender_id: u.id, file: 'test_video_sani')
         '  |
-        = link_to 'Test Video 1', receive_test_video_path(id: @user.id, sender_id: u.id, file: 'test_video_1')
+        = link_to 'Test Video Long', receive_test_video_path(id: @user.id, sender_id: u.id, file: 'test_video_1')
         '  |
         = link_to 'Test Video 2', receive_test_video_path(id: @user.id, sender_id: u.id, file: 'test_video_2')
         '  |
