Add mixpanel link to landing footere

--- a/app/views/landing/invite.html.slim
+++ b/app/views/landing/invite.html.slim
@@ -34,3 +34,5 @@
       .tag-line
         em There ain't nothing like it.
       = link_to 'privacy', privacy_path
+      a href='https://mixpanel.com/f/partner' rel='nofollow'
+        img src='//cdn.mxpnl.com/site_media/images/partner/badge_light.png' alt='Mobile Analytics' style='padding-top: 20px'
