Fix landing background asset

--- a/app/assets/stylesheets/landing.css.sass
+++ b/app/assets/stylesheets/landing.css.sass
@@ -77,7 +77,7 @@ section
 
   &.no-inviter
     max-height: 760px
-    background-image: asset-url("orange-background.jpg")
+    background-image: asset-data-url("orange-background.jpg")
     background-position: center bottom
 
   #logo
